--- a/style.css
+++ b/style.css
@@ -24,6 +24,11 @@ a {
 /* body */
 body {
   background-color: #000;
+  background-image: url('/img/bg-page.jpg');
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
   color: #fff;
 }
 
