--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ a {
 /* body */
 body {
   background-color: #000;
-  background-image: url('/img/bg-page.jpg');
+  background-image: url('img/bg-page.jpg');
   background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
